--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.2",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@types/react-redux": "^7.1.24",
     "apollo-server-express": "^3.10.1",
     "chalk": "^5.0.1",
     "core-js": "^3.6.5",
@@ -25,6 +27,7 @@
     "mongoose": "^6.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
