--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@nrwl/cli": "14.5.10",
